ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/Certification_Training__c.object-meta.xml
<CustomObject>
    <description>Custom object for tracking of certifications &amp; training</description>
    <label>Certification &amp; Training</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification &amp; Training</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>