ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/fields/EU_Certification_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Certification_Issue_Date__c</fullName>
    <label>Certification Issue Date</label>
    <type>Date</type>
</CustomField>