ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/fields/EU_Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>EU_Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EU_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IKO Concept Partner</fullName>
            </value>
            <value>
                <fullName>IKO Trade Partner</fullName>
            </value>
            <value>
                <fullName>Liquid contractor</fullName>
            </value>
            <value>
                <fullName>Goldseal</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Mach One</fullName>
            </value>
            <value>
                <fullName>Permapark</fullName>
            </value>
            <value>
                <fullName>Permaphalt</fullName>
            </value>
            <value>
                <fullName>PermaTEC</fullName>
            </value>
            <value>
                <fullName>Polimar EC/UV</fullName>
            </value>
            <value>
                <fullName>Polimar FCS</fullName>
            </value>
            <value>
                <fullName>Polimar FCS (Car Park)</fullName>
            </value>
            <value>
                <fullName>Polimar WG</fullName>
            </value>
            <value>
                <fullName>Safestick</fullName>
            </value>
            <value>
                <fullName>Superflex</fullName>
            </value>
            <value>
                <fullName>Ultra Prevent</fullName>
            </value>
            <value>
                <fullName>IKO Certified Roofing Contractor</fullName>
            </value>
            <value>
                <fullName>IKO Roof club member</fullName>
            </value>
            <value>
                <fullName>IKO Certified Liquid Contractor</fullName>
            </value>
            <value>
                <fullName>Pilot Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>