ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/fields/EU_ToBeDeleted__c.field-meta.xml
<CustomField>
    <fullName>EU_ToBeDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For EU: used for Data Stewards</description>
    <inlineHelpText>Your data steward will delete the record.</inlineHelpText>
    <label>To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>