ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/fields/EU_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>EU_Training_Date__c</fullName>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>