ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/fields/EU_Type_of_Training__c.field-meta.xml
<CustomField>
    <fullName>EU_Type_of_Training__c</fullName>
    <label>Type of Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>