ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/recordTypes/EU_Certification.recordType-meta.xml
<RecordType>
    <fullName>EU_Certification</fullName>
    <active>true</active>
    <description>EU Certification</description>
    <label>EU Certification</label>
</RecordType>