ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Certification_Training__c/recordTypes/EU_Training.recordType-meta.xml
<RecordType>
    <fullName>EU_Training</fullName>
    <active>true</active>
    <description>EU Training</description>
    <label>EU Training</label>
</RecordType>